started building pages, styling sheets

--- a/index.html
+++ b/index.html
@@ -4,33 +4,45 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Add proper head tag to provide a page description for search
-             engines. -->
-        <title>API Superstore</title>
-        <!-- Bootstrap CSS Framework -->
-        <!-- You can remove the ``link`` tags below if you don't want to use
-             Bootstrap with your site. If you choose to use Bootstrap, be sure
-             to reference the resources and the Bootstrap official
-             documentation: http://getbootstrap.com.
-
-             Please Note: This repo does not include the Bootstrap Javascript
-             plugins, so you cannot use the features documented under
-             "Javascript" on the Bootstrap documentation site. -->
+        <meta name="keywords" contetn="API, HTML, CSS, Superstore"
+        <title><img id="headerimage" class="pageheader" src="design/apiheader.jpg"></title>
+        <!-- Bootstrap CSS Framework documentation: http://getbootstrap.com.-->
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-theme.css">
         <!-- End Bootstrap CSS Framework -->
-
+        <link rel="stylesheet" href="main.css">
         <!-- TODO: replace favicon, apple-touch-icon, and tile images to best
              support bookmarking. -->
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="favicon" href="favicon.ico">
 
     </head>
     <body>
-        <!-- Note: If you do not see a lamp icon in the heading below
-             when you view this file in a web browser, then there is an issue
-             with how Bootstrap is linked to this page. -->
-        <h1><span class="glyphicon glyphicon-lamp"></span> Hello World!</h1>
+        <div>
+          <ul id="social">
+            <li><img id="facebook" class="socialmediaicon" src="design/facebooklogo.png"/></li>
+            <li><img id="instagram" class="socialmediaicon" src="design/instagramlogo.jpg"/></li>
+            <li><img id="twitter" class="socialmediaicon" src="design/twitterlogo.png"/></li>
+          </ul>
+        </div>
+      <div>
+          <iframe id="explainervideo" width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allowfullscreen></iframe>
+        <div> <h1>
+            <features id="features" class="dropdown">Features</features>
+          </h1>
+        </div>
+        <div>
+           <h1>
+                 <testimonials id="testimonials" class="dropdown">Testimonials</testimonials>
+                 </h1><br>
+        </div>
+       <content>
+           <div id="content" class="text">
+                <h1>
+                What the API Superstore Does
+                 </h1><br>
+              <about>We source user data from social media, email, and webiste trackign (just liek you could do for free). Then, for a minimal amount of effort on our part we sell access to that data to you. In essence, we are a "middle person" where one is not needed. So, sign up today and pay for nothing!</testimonials>
+          </div>
+      </content>
         <!-- TODO: Populate this page with all the content you deem
              necessary to create a compelling product page! -->
 
