styled pages, added new media files

--- a/index.html
+++ b/index.html
@@ -14,26 +14,34 @@
         <!-- TODO: replace favicon, apple-touch-icon, and tile images to best
              support bookmarking. -->
         <link rel="favicon" href="favicon.ico">
-
     </head>
     <body>
         <div>
           <ul id="social">
-            <li><img id="facebook" class="socialmediaicon" src="design/facebooklogo.png"/></li>
-            <li><img id="instagram" class="socialmediaicon" src="design/instagramlogo.jpg"/></li>
-            <li><img id="twitter" class="socialmediaicon" src="design/twitterlogo.png"/></li>
+            <li><a href="https://www.facebook.com"> <img id="facebook" class="socialmediaicon" src="design/facebooklogo.png"></a></li>
+            <li><a href="https://www.instagram.com/?hl=en"><img id="instagram" class="socialmediaicon" src="design/instagramlogo.jpg"/></a></li>
+            <li><a href="https://twitter.com"><img id="twitter" class="socialmediaicon" src="design/twitterlogo.png"/></a></li>
           </ul>
         </div>
       <div>
-          <iframe id="explainervideo" width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allowfullscreen></iframe>
+          <iframe id="explainervideo" width="560" height="315" src="design/explainervideo.mp4"></iframe>
         <div> <h1>
-            <features id="features" class="dropdown">Features</features>
+            <div id="f1_container">
+<div id="f1_card" class="shadow">
+  <div class="front face">
+  <img id="featuresimg" src="design/features.png">
+  </div>
+  </div>
+</div>
+</div>
           </h1>
         </div>
         <div>
            <h1>
-                 <testimonials id="testimonials" class="dropdown">Testimonials</testimonials>
-             
+                <div id="f1_container">
+<div id="f1_card" class="shadow">
+  <div class="front face">
+  <img id="testimonialsimg" src="design/testimonials.png">
                  </h1><br>
         </div>
        <content>
