--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="main.css">
         <!-- TODO: replace favicon, apple-touch-icon, and tile images to best
              support bookmarking. -->
-        <link rel="favicon" href="favicon.ico">
+        <link rel="favicon" href="design/gameboy_black.ico">
     </head>
     <body>
         <div>
@@ -24,26 +24,24 @@
           </ul>
         </div>
       <div>
-          <iframe id="explainervideo" width="560" height="315" src="design/explainervideo.mp4"></iframe>
+          <video id="explainervideo" width="560" height="315" controls src="design/explainervideo.mp4"></video>
         <div> <h1>
             <div id="f1_container">
-<div id="f1_card" class="shadow">
-  <div class="front face">
-  <img id="featuresimg" src="design/features.png">
+<section class="container">
+  <div id="card">
+    <figure class="front"><img id="featuresimg" src="design/features.png"></figure>
+   
   </div>
-  </div>
-</div>
-</div>
-          </h1>
-        </div>
-        <div>
+
            <h1>
                 <div id="f1_container">
-<div id="f1_card" class="shadow">
+<div id="f2_card" class="shadow">
   <div class="front face">
   <img id="testimonialsimg" src="design/testimonials.png">
                  </h1><br>
         </div>
+
+
        <content>
            <div id="content" class="text">
                 <h1>
