--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav id= "navbar" class="navbar navbar-inverse">
           <div class="container-fluid">
             <div class="navbar-header">
-            <a class="navbar-brand" href="#">API Superstore</a>
+            <a class="navbar-brand" href="index.html#head">API Superstore</a>
             </div>
               <ul class="nav navbar-nav">
-                <li><a href="index.html#head">Home</a></li>
+                <li class="active"><a href="index.html#head">Home</a></li>
                 <li><a href="index.html#content">About</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
               </ul>
@@ -92,23 +92,26 @@
                 </ul>
               </div>
       <div>
+         <div>
           <ul id="featuresmenu">
-            <li><a href="#"> <img id="facebook" class="socialmediaicon" src="design/icon1.png"></a>API Translator</li>
-            <li><a href="#"><img id="instagram" class="socialmediaicon" src="design/icon2.png"/></a>API Finder</li>
-            <li><a href="#"><img id="twitter" class="socialmediaicon" src="design/icon3.jpg"/></a>API Whosamawhatsit</li>
+            <li><a href="apitrans.html"><img id="facebook" class="socialmediaicon" src="design/icon1.png">API Translator</a></li>
+            <li><a href="apifinder.html"><img id="instagram" class="socialmediaicon" src="design/icon2.png"/>API Finder</a></li>
+            <li><a href="apiwho.html"><img id="twitter" class="socialmediaicon" src="design/icon3.jpg"/>API Whosamawhatsit</a></li>
           </ul>
         </div>
+      </div>
+     
       <div>
           <ul id="testimonialsmenu">
-            <li><a href="#"><img id="instagram" class="socialmediaicon" src="design/icon1a.png"/></a>Students</li>
-            <li><a href="#"><img id="twitter" class="socialmediaicon" src="design/icon2a.jpg"/></a>Professionals</li>
+            <li><a href="students.html"><img id="instagram" class="socialmediaicon" src="design/icon1a.png"/>Students</a></li>
+            <li><a href="professionals.html"><img id="twitter" class="socialmediaicon" src="design/icon2a.jpg"/>Professionals</a></li>
           </ul>
         </div>
         <div>
           <video id="explainervideo" width="560" height="315" controls src="design/explainervideo.mp4"></video>
         <div> 
-          <img id="featuresimg" src="design/features.png">
-          <img id="testimonialsimg" src="design/testimonials.png">
+          <img class="slidermenu1" id="featuresimg" src="design/features.png">
+          <img class="slidermenu2" id="testimonialsimg" src="design/testimonials.png">
         </div>
         <content>
            <div id="content" class="text">
@@ -123,6 +126,7 @@
             </ul>
           </footer>
           </pagewrapper>
+    
           <script>
 
 var modal = document.getElementById('loginform');
