--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li class="active"><a href="index.html#head">Home</a></li>
                 <li><a href="index.html#content">About</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
+                  <li><a href="apitrans.html"><img id="facebook" class="socialmediaicon" src="design/icon1.png">API Translator</a></li>
+                  <li><a href="apifinder.html"><img id="instagram" class="socialmediaicon" src="design/icon2.png"/>API Finder</a></li>
+                  <li><a href="professionals.html"><img id="twitter" class="socialmediaicon" src="design/icon2a.jpg"/>Testimonials</a></li>
               </ul>
               <button type="button" id="login" class="btn btn-danger navbar-btn" data-toggle="modal" data-target="#loginform">Login</button>
               <button type="button" id="register" class="btn btn-danger navbar-btn" data-toggle="modal" data-target="#registerform">Register</button>
@@ -84,41 +87,24 @@
                             <button type="submit" class="btn btn-primary">Register</button>
                 </div> 
                </div>
-              <div>
+              <div class="col-lg-8" class="col-sm-12">
                 <ul id="social">
                   <li><a href="https://www.facebook.com"> <img id="facebook" class="socialmediaicon" src="design/facebooklogo.png"></a></li>
                   <li><a href="https://www.instagram.com/?hl=en"><img id="instagram" class="socialmediaicon" src="design/instagramlogo.jpg"/></a></li>
                   <li><a href="https://twitter.com"><img id="twitter" class="socialmediaicon" src="design/twitterlogo.png"/></a></li>
                 </ul>
               </div>
-      <div>
-         <div>
-          <ul id="featuresmenu">
-            <li><a href="apitrans.html"><img id="facebook" class="socialmediaicon" src="design/icon1.png">API Translator</a></li>
-            <li><a href="apifinder.html"><img id="instagram" class="socialmediaicon" src="design/icon2.png"/>API Finder</a></li>
-            <li><a href="apiwho.html"><img id="twitter" class="socialmediaicon" src="design/icon3.jpg"/>API Whosamawhatsit</a></li>
-          </ul>
-        </div>
-      </div>
      
-      <div>
-          <ul id="testimonialsmenu">
-            <li><a href="students.html"><img id="instagram" class="socialmediaicon" src="design/icon1a.png"/>Students</a></li>
-            <li><a href="professionals.html"><img id="twitter" class="socialmediaicon" src="design/icon2a.jpg"/>Professionals</a></li>
-          </ul>
-        </div>
-        <div>
+     
+        <div class="col-lg-8" class="col-sm-12">
           <video id="explainervideo" width="560" height="315" controls src="design/explainervideo.mp4"></video>
-        <div> 
-          <img class="slidermenu1" id="featuresimg" src="design/features.png">
-          <img class="slidermenu2" id="testimonialsimg" src="design/testimonials.png">
         </div>
         <content>
-           <div id="content" class="text">
+           <div class="col-lg-8" class="col-sm-12" id="content" class="text">
              <h1><b>What the API Superstore Does</b></h1><br>
                <h3><about id="about">We source user data from social media, email, and website tracking (just like you could do for free). Then, for a minimal amount of effort on our part we sell access to that data to you. In essence, we are a "middle person" where one is not needed. So, sign up today!</about></h3> </div>
         </content>
-          <footer>
+          <footer class="col-lg-8" class="col-sm-12">
             <ul id="contact">
               <li><b>Phone:</b> 555-555-5555</li><p></p>
               <li><b>Address:</b> 12345 La La Lane, The Northpole, 98765</li><p></p>
