adjusted col numbers to work better on a phone

--- a/bootstrapversion.html
+++ b/bootstrapversion.html
@@ -84,21 +84,21 @@
                </div>
 <div class="container-fluid text-center">    
   <div class="row content">
-    <div class="col-sm-2 sidenav">
+    <div class="col-lg-8-sm-12 sidenav">
        <ul id="social">
                   <li><a href="https://www.facebook.com"> <img id="facebook" class="socialmediaicon" src="design/facebooklogo.png"></a></li>
                   <li><a href="https://www.instagram.com/?hl=en"><img id="instagram" class="socialmediaicon" src="design/instagramlogo.jpg"/></a></li>
                   <li><a href="https://twitter.com"><img id="twitter" class="socialmediaicon" src="design/twitterlogo.png"/></a></li>
                 </ul>
     </div>
-    <div class="well">
-                <video id="explainervideo" width="560" height="315" controls src="design/explainervideo.mp4"></video>
+    <div id="videoexplainer" class="col-lg-8-sm-12">
+                <video width="560" height="315" controls src="design/explainervideo.mp4"></video>
     </div>
-    <div id="content" class="col-sm-8 text-left"> 
+    <div id="content" class="col-lg-8-sm-12 text-left"> 
                    <h1><b>What the API Superstore Does</b></h1><br>
                <h3><about id="about">We source user data from social media, email, and website tracking (just like you could do for free). Then, for a minimal amount of effort on our part we sell access to that data to you. In essence, we are a "middle person" where one is not needed. So, sign up today!</about></h3> </div>
     </div>
-    <div class="col-sm-2 sidenav">
+    <div class="col-lg-8-sm-12 sidenav">
         <ul id="featuresmenu">
             <li><a href="apitrans.html"><img id="facebook" class="socialmediaicon" src="design/icon1.png">API Translator</a></li>
             <li><a href="apifinder.html"><img id="instagram" class="socialmediaicon" src="design/icon2.png"/>API Finder</a></li>
@@ -115,7 +115,7 @@
     </div>
   </div>
 </div>
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center" class="col-lg-8-sm-12">
  <ul id="contact">
               <li><b>Phone:</b> 555-555-5555</li><p></p>
               <li><b>Address:</b> 12345 La La Lane, The Northpole, 98765</li><p></p>
